# SolveLTE

./: README.md  Задание Курсовой работы 6сем Климов 28-03 (1).doc
КОД/Численное решение задачи/Code/: CMakeLists.txt  LTE.cpp  LTE.h  main.cpp
КОД/Численное решение задачи/Code/Libs/: algebra.cpp  algebra.h
КОД/Численное решение задачи/Code/Output/datasets/: test2_0.010000_0.010000.txt  test2_0.050000_0.100000.txt  test2_0.100000_0.100000.txt  test3_0.010000_0.010000.txt  test3_0.050000_0.050000.txt  test4_0.010000_0.010000.txt  test4_0.100000_0.100000.txt  test5_0.010000_0.010000.txt  test5_0.050000_0.100000.txt
КОД/Численное решение задачи/Code/Output/test1/: test1_LD2e.txt  test1_LD2i.txt  test1_LD3e.txt  test1_LD3i.txt  test1_Lax.txt  test1_LaxWen.txt
КОД/Численное решение задачи/Code/Output/test2/: test2_LD2e.txt  test2_LD2i.txt  test2_LD3e.txt  test2_LD3i.txt  test2_Lax.txt  test2_LaxWen.txt
КОД/Численное решение задачи/Code/Output/test3/: test3_LD2e.txt  test3_LD2i.txt  test3_LD3i.txt  test3_Lax.txt  test3_LaxWen.txt
КОД/Численное решение задачи/Code/Output/test4/: test4_LD2e.txt  test4_LD2i.txt  test4_LD3e.txt  test4_LD3i.txt  test4_Lax.txt  test4_LaxWen.txt
КОД/Численное решение задачи/Code/Output/test5/: test5_LD2e.txt  test5_LD2i.txt  test5_LD3e.txt  test5_LD3i.txt  test5_Lax.txt  test5_LaxWen.txt
КОД/Численное решение задачи/Code/Output/test6/: test6_LD2e.txt  test6_LD2i.txt
ПРЕЗЕНТАЦИЯ/: Климов ФН2-51Б Куросвая работа 6 сем.aux  Климов ФН2-51Б Куросвая работа 6 сем.nav  Климов ФН2-51Б Куросвая работа 6 сем.out  (+3 more)
ТЕКСТ/: Курсовая работа.aux  (+2 more)
(+32 files in other folders)
